user-charts/admin-first-project/templates/network/admin-nginx-second-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-second
  labels:
    app: nginx-second
spec:
  type: ClusterIP
  selector:
    app: nginx-second
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
