user-charts/admin-first-project/templates/network/admin-scale-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scale-test
  labels:
    app: scale-test
spec:
  type: ClusterIP
  selector:
    app: scale-test
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
