user-charts/admin-first-project/templates/network/admin-scale-test-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scale-test
  annotations:
    caplatform.dpdns.org/public: "true"
    caplatform.dpdns.org/contextpath: "first-project-scale=>scale.192.168.100.246.sslip.io"
spec:
  parentRefs:
    - name: first-project-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "scale.192.168.100.246.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: scale-test
          port: 8080
